2009-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (get_full_path_of_dll): Just return a bool value.  Drop
	local path_conv in favor of getting it as parameter.  Add local string
	buffer instead of getting it as parameter.
	(dlopen): Accommodate get_full_path_of_dll change.  Fetch WCHAR Windows
	path from path_conv variable and call LoadLibraryW.

2009-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (STATUS_LOCK_NOT_GRANTED): Define.
	* syscalls.cc (unlink_nt): Handle STATUS_LOCK_NOT_GRANTED same as
	STATUS_SHARING_VIOLATION.  Add lengthy comment to explain why.

2009-04-15  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::get_wide_win32_path): Allow relative paths.
	(cygwin_conv_path): In case of CCP_POSIX_TO_WIN_W, convert relative 
	paths to absolute paths if the relative pathname length exceeds
	MAX_PATH.

2009-04-15  Corinna Vinschen  <corinna@vinschen.de>

	* libc/bsdlib.cc: Align copyright with upstream.
	* libc/fnmatch.c: Ditto.
	* libc/fts.c: Ditto.
	* libc/inet_addr.c: Ditto.
	* libc/inet_network.c: Ditto.
	* libc/rcmd.cc: Ditto.
	* libc/rexec.cc: Ditto.

2009-04-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Really revert to using tempdir.

2009-04-14  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Revert to using tempdir.

2009-04-14  Corinna Vinschen  <corinna@vinschen.de>

	* localtime.cc (tzload): Implement setting __tzrule's offset member
	using newlib's __gettzinfo () interface also when tzload returns
	successfully.

2009-04-13  Dave Korn  <dave.korn.cygwin@gmail.com>

	* include/stdint.h (intptr_t):  Remove long from type.
	(uintptr_t):  Likewise.
	(INTPTR_MIN):  Remove 'L' suffix.
	(INTPTR_MAX, UINTPTR_MAX):  Likewise.

2009-04-12  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Initial stab at cleaning up temp files.  More work needed.
	* mkimport: Ditto.

2009-04-12  Christopher Faylor  <me+cygwin@cgf.cx>

	* Makefile.in (clean): Clean globals.h.
	(LIBCOS): Depend on globals.h.
